--- a/experiments/baidu/seg_hrnet_ocr_w48_train_512x1024_sgd_lr1e-2_wd5e-4_bs_2_epoch484.yaml
+++ b/experiments/baidu/seg_hrnet_ocr_w48_train_512x1024_sgd_lr1e-2_wd5e-4_bs_2_epoch484.yaml
@@ -2,18 +2,18 @@ CUDNN:
   BENCHMARK: true
   DETERMINISTIC: false
   ENABLED: true
-GPUS: (0,1,2,3)
+GPUS: (0,1)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-WORKERS: 4
+WORKERS: 8
 PRINT_FREQ: 10
 
 DATASET:
-  DATASET: cityscapes
-  ROOT: 'data/cityscapes/'
-  TEST_SET: 'val.lst'
-  TRAIN_SET: 'train.lst'
-  NUM_CLASSES: 19
+  DATASET: baidu
+  ROOT: 'data/baidu/'
+  TEST_SET: 'baiduData/val.csv'
+  TRAIN_SET: 'baiduData/train.csv'
+  NUM_CLASSES: 9
 MODEL:
   NAME: seg_hrnet_ocr
   NUM_OUTPUTS: 2
@@ -78,7 +78,7 @@ TRAIN:
   - 1024
   - 512
   BASE_SIZE: 2048
-  BATCH_SIZE_PER_GPU: 3
+  BATCH_SIZE_PER_GPU: 1
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 484
