--- a/experiments/baidu/seg_hrnet_w48_train_512x1024_sgd_lr1e-2_wd5e-4_bs_2_epoch484.yaml
+++ b/experiments/baidu/seg_hrnet_w48_train_512x1024_sgd_lr1e-2_wd5e-4_bs_2_epoch484.yaml
@@ -2,21 +2,21 @@ CUDNN:
   BENCHMARK: true
   DETERMINISTIC: false
   ENABLED: true
-GPUS: (0,1,2,3)
+GPUS: (0,)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
 WORKERS: 4
-PRINT_FREQ: 10
+PRINT_FREQ: 100
 
 DATASET:
-  DATASET: cityscapes
-  ROOT: 'data/cityscapes/'
-  TEST_SET: 'val.lst'
-  TRAIN_SET: 'train.lst'
-  NUM_CLASSES: 19
+  DATASET: baidu
+  ROOT: 'data/baidu/'
+  TEST_SET: 'baiduData/val.csv'
+  TRAIN_SET: 'baiduData/train.csv'
+  NUM_CLASSES: 9
 MODEL:
-  NAME: seg_hrnet_ocr
-  NUM_OUTPUTS: 2
+  NAME: seg_hrnet
+  ALIGN_CORNERS: False
   PRETRAINED: "data/pretrained_models/hrnetv2_w48_imagenet_pretrained.pth"
   EXTRA:
     FINAL_CONV_KERNEL: 1
@@ -72,13 +72,12 @@ LOSS:
   USE_OHEM: false
   OHEMTHRES: 0.9
   OHEMKEEP: 131072
-  BALANCE_WEIGHTS: [0.4, 1]
 TRAIN:
   IMAGE_SIZE:
   - 1024
   - 512
   BASE_SIZE: 2048
-  BATCH_SIZE_PER_GPU: 3
+  BATCH_SIZE_PER_GPU: 2
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 484
@@ -95,9 +94,9 @@ TRAIN:
   SCALE_FACTOR: 16
 TEST:
   IMAGE_SIZE:
-  - 2048
   - 1024
+  - 512
   BASE_SIZE: 2048
-  BATCH_SIZE_PER_GPU: 4
+  BATCH_SIZE_PER_GPU: 1
   FLIP_TEST: false
   MULTI_SCALE: false
